--- a/Сайт/html/main.html
+++ b/Сайт/html/main.html
@@ -9,13 +9,24 @@
 <header>
     <h1 class = "sait_name"> Сайт Гига Имбових Чебуреков</h1>
     <div class="navigation_pane">
-        <div class="button_AIF"></div>
-        <div class="button_news"></div>
-        <div class="button_Sasha"></div>
+        <div class="button_AIF">
+            <h2>Артемий </h2>
+        </div>
+        <div class="button_news">
+            <h2>Новости</h2>
+        </div>
+        <div class="button_Sasha">
+            <h2>Cаша</h2>
+        </div>
     </div>
 </header>
 <body>
-    
+    <div class="">
+
+    </div>
 
 </body>
+<footer>
+
+</footer>
 </html>
