--- a/Сайт/html/main.html
+++ b/Сайт/html/main.html
@@ -3,30 +3,33 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link href="../css/main.css" rel="stylesheet">
     <title>Document</title>
+    <link rel="stylesheet" href="../css/main.css">
+    <header>
+        <p id="textFour">Сайт гига имбовых чебуреков</p>
+        <div class="navigation_pane">
+            <div class="button_AIF">
+                <h2>Артемий </h2>
+            </div>
+            <div class="button_news">
+                <h2>Новости</h2>
+            </div>
+            <div class="button_Sasha">
+                <h2>Cаша</h2>
+            </div>
+        </div>
+    </header>
 </head>
-<header>
-    <h1 class = "sait_name"> Сайт Гига Имбових Чебуреков</h1>
-    <div class="navigation_pane">
-        <div class="button_AIF">
-            <h2>Артемий </h2>
-        </div>
-        <div class="button_news">
-            <h2>Новости</h2>
-        </div>
-        <div class="button_Sasha">
-            <h2>Cаша</h2>
-        </div>
-    </div>
-</header>
 <body>
-    <div class="">
-
+    <div class="containerOne">
+        <p id="textOne">Новости</p>
+        <p id="textTwo">1.Поворот с улицы Маркса на переулок Широкий запретили в Ижевске</p>
+        <p id="textThree">2.Магнитные бури 15-31 декабря в Ижевске: ожидается 6 крупных всплесков геомагнитной активности</p>
+        <p id="textFive">3.Первого замглавы Можгинского района осудили за получение взятки</p>
     </div>
-
+    
 </body>
-<footer>
-
+<footer class="footerOne">
+    <p id="textSix">За время написания сайта пострадало 2 кружки кофе</p>
 </footer>
 </html>
