--- a/Сайт/html/main.html
+++ b/Сайт/html/main.html
@@ -31,5 +31,8 @@
 </body>
 <footer class="footerOne">
     <p id="textSix">За время написания сайта пострадало 2 кружки кофе</p>
+    <a href="https://web.telegram.org/a/#-4064735778" class="footerLink">1.Telegram chat link</a>
+    <a href="https://izhlife.ru/" class="footerLinkTwo">2.Izhevsk News</a>
+    <a href="https://web.telegram.org/a/#-4095754041" class="footerLinkThree">3.General TG group</a>
 </footer>
 </html>
