--- a/Сайт/html/main.html
+++ b/Сайт/html/main.html
@@ -19,11 +19,11 @@
                 <a class="button" href="../html/AIF.html">
                     <h2>Артемий </h2>
                 </a>
-                <a class="button" href="../html/main.html">
-                    <h2>Новости</h2>
+                <a class="button" href="../html/index.html">
+                    <h2>Cаша</h2>
                 </a>
                 <a class="button" href="../html/glav.html">
-                    <h2>Cаша</h2>
+                    <h2>Главная</h2>
                 </a>
             
         </div>
