--- a/Сайт/html/glav.html
+++ b/Сайт/html/glav.html
@@ -29,7 +29,7 @@
     </header>
     <body>
         <div class="giga_photo">
-            <h2 class="test">sxdcfvghbnjkml</h2>
+            <img src="../photo/"
         </div>
     <footer>
 
