--- a/Сайт/html/glav.html
+++ b/Сайт/html/glav.html
@@ -29,7 +29,7 @@
     </header>
     <body>
         <div class="giga_photo">
-            <img src="../photo/"
+            <img width="100%" src="../photo/IMG_20231227_151915.jpg">
         </div>
     <footer>
 
