--- a/Сайт/html/index2.html
+++ b/Сайт/html/index2.html
@@ -30,10 +30,15 @@
         <p id="textSeven">Саша</p>
     </div>
     <div class="PhotoSasha">
-        <img height="200px" width="200px" src="../1646419982_3-kartinkin-net-p-kartinki-na-avu-lyagushki-3.jpg" >
+        <img height="200px" width="200px" src="https://previews.123rf.com/images/virtosmedia/virtosmedia2303/virtosmedia230314763/199714865-cute-cartoon-frog-on-green-background-vector-illustration-for-your-design.jpg" >
     </div>
+        <div class="sashaTextmain">
+        <h2>1.Занимался 5 лет футболом</h2>
+        <h2>2.играю в дотку</h2>
+        <h2>3.создал гитхаб</h2></div>
 </body>
 <footer>
-    <div class="FooterSasha"></div>
-</footer>
+    <div class="FooterSasha">
+        <a href="https://web.telegram.org/a/#-4064735778" class="footerLink">1.Telegram chat link</a>
+    </div>
 </html>
